--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,7 +6,7 @@ coilCompose = "2.4.0"
 converterMoshi = "2.9.0"
 converterGson = "2.9.0"
 datastorePreferences = "1.1.1"
-firebaseBom = "33.1.0"
+firebaseBom = "33.1.1"
 firebaseMessagingKtx = "24.0.0"
 generativeai = "0.8.0"
 googleServices = "4.4.2"
@@ -23,11 +23,13 @@ lifecycleRuntimeKtx = "2.8.2"
 activityCompose = "1.9.0"
 composeBom = "2024.06.00"
 lifecycleViewmodelCompose = "2.8.2"
-pagingCompose = "3.3.0"
+pagingCompose = "1.3.0"
 pagingCommonKtx = "3.3.0"
 pagingRuntimeKtx = "3.3.0"
 playServicesAuth = "21.2.0"
 retrofit = "2.9.0"
+roomCompiler = "2.6.1"
+roomPaging = "2.6.1"
 streamChatAndroidCompose = "6.0.8"
 streamChatAndroidOffline = "6.0.8"
 timber = "4.7.1"
@@ -45,6 +47,8 @@ androidx-material-icons-extended = { module = "androidx.compose.material:materia
 androidx-paging-common-ktx = { module = "androidx.paging:paging-common-ktx", version.ref = "pagingCommonKtx" }
 androidx-paging-compose = { module = "androidx.paging:paging-compose", version.ref = "pagingCompose" }
 androidx-paging-runtime-ktx = { module = "androidx.paging:paging-runtime-ktx", version.ref = "pagingRuntimeKtx" }
+androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "roomCompiler" }
+androidx-room-paging = { module = "androidx.room:room-paging", version.ref = "roomPaging" }
 animated-navigation-bar = { module = "com.exyte:animated-navigation-bar", version.ref = "animatedNavigationBar" }
 business-calculator = { module = "com.github.fredywise.simpleseries:business-calculator", version.ref = "businessCalculator" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
