--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,17 +8,17 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/bear_chat"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/bear_chat"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AskQuestions"
+        android:theme="@style/Theme.BearSplashScreen"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.AskQuestions">
+            android:theme="@style/Theme.BearSplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
