--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,6 +5,7 @@ businessCalculator = "0.0.1"
 coilCompose = "2.4.0"
 converterMoshi = "2.9.0"
 converterGson = "2.9.0"
+coreSplashscreen = "1.0.1"
 datastorePreferences = "1.1.1"
 firebaseBom = "33.1.1"
 firebaseMessagingKtx = "24.0.0"
@@ -39,6 +40,7 @@ composeMaterial = "1.3.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "coreSplashscreen" }
 androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
 androidx-hilt-compiler = { module = "androidx.hilt:hilt-compiler", version.ref = "hiltCompiler" }
 androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltCompiler" }
